changed to java 8